--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   },
   "dependencies": {
     "@mantine/core": "7.8.0",
-    "@mantine/hooks": "7.8.0",
+    "@mantine/form": "^7.8.0",
+    "@mantine/hooks": "^7.8.0",
+    "@tabler/icons-react": "^3.2.0",
+    "mantine-form-zod-resolver": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-player": "^2.16.0",
+    "react-router-dom": "^6.22.3",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.0.0",
@@ -37,7 +42,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.2.65",
+    "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -48,7 +53,7 @@
     "eslint-config-mantine": "3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^24.0.0",
